--- a/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
@@ -3,8 +3,8 @@ GtkIconView.view.cell:selected:focus {
     background-color: alpha(@theme_base_color, 0.0);
 
     border-style: solid;
-    border-radius: 10;
-    border-width: 3;
+    border-radius: 10px;
+    border-width: 3px;
     border-color: #d3d7cf;
 
     /* FIXME: this probably needs to be better;
