Widgets: changes to pushed buttons, removed the gradients and increased lateral          padding to fullscreen apps toolbars.

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -525,7 +525,8 @@ EphyToolbar .location-entry .button:active:hover {
 
 EphyToolbar .location-entry .button:hover,
 EphyToolbar .location-entry .button:focus,
-EphyToolbar .location-entry .button:active {
+EphyToolbar .location-entry .button:active,
+EphyToolbar .location-entry .button *:active {
     color: @theme_text_color;
 }
 
