--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -489,6 +489,12 @@ EphyToolbar .entry:backdrop {
     padding-right: 4;
 }
 
+EphyToolbar .entry:focus {
+    box-shadow: 1 2 inset alpha(@theme_selected_bg_color, 0.1),
+                1 1 inset alpha(@theme_selected_bg_color, 0.1),
+                0 -1 inset alpha(@theme_selected_bg_color, 0.2);
+}
+
 EphyToolbar .location-entry .button {
     color: @internal_element_color;
     -GtkButton-child-displacement-y: 0;
@@ -520,7 +526,9 @@ EphyToolbar .location-entry .button:active:hover {
                                     left top, left bottom,
                                     from(shade(@entry_background_a, 0.9)),
                                     to(@entry_background_b));
-    box-shadow: 0 1 inset @entry_inset, 0 2 inset alpha(@entry_inset, 0.4), 1 0 inset @inset_dark_color;
+    box-shadow: 0 1 inset @entry_inset, 
+                0 2 inset alpha(@entry_inset, 0.4), 
+                1 0 inset @inset_dark_color;
 }
 
 EphyToolbar .location-entry .button:hover,
