Widgets: fixed text color for insensitive comboboxes.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1060,6 +1060,7 @@ GtkComboBox.combobox-entry {
 
 GtkComboBox *:insensitive {
     text-shadow: none;
+    color: @insensitive_fg_color;
 }
 
 GtkComboBox .separator {
