Widget: make separators inside buttons do not change color while         the button is pressed.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -872,6 +872,8 @@ GtkLinkButton * {
     text-shadow: none;
 }
 
+.button .separator { color: shade(@internal_element_color, 1.3); }
+
 /*****************
  * Notebooks and *
  * tabs          *
