--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -13,8 +13,8 @@
 @define-color theme_unfocused_text_color mix(@theme_unfocused_base_color, @theme_text_color, 0.8);
 @define-color theme_unfocused_fg_color mix(@theme_unfocused_bg_color, @theme_text_color, 0.3);
 @define-color theme_unfocused_bg_color @theme_bg_color;
-@define-color theme_unfocused_selected_bg_color shade (@theme_selected_bg_color, 0.9); /* FIXME */
-@define-color theme_unfocused_selected_fg_color @theme_selected_fg_color; /* FIXME */
+@define-color theme_unfocused_selected_bg_color @unfocused_borders;
+@define-color theme_unfocused_selected_fg_color @theme_selected_fg_color;
 @define-color unfocused_button_background @theme_unfocused_bg_color;
 @define-color unfocused_borders mix(@theme_unfocused_bg_color, @theme_text_color, 0.15);
 @define-color unfocused_insensitive_borders mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
