--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -25,9 +25,9 @@
 @define-color theme_unfocused_base_color shade(@insensitive_bg_color, 1.015); /* I don't want the same color, hope not to hurt usability to much here */
 @define-color theme_unfocused_text_color mix(@theme_unfocused_fg_color, @theme_text_color, 0.5); /* Need something darker here to have stuff nicelly readable*/
 @define-color theme_unfocused_fg_color #a7aba7;
-@define-color theme_unfocused_bg_color @theme_bg_color; /* FIXME */
-@define-color theme_unfocused_selected_bg_color darker(@theme_selected_bg_color);
-@define-color theme_unfocused_selected_fg_color @theme_unfocused_base_color; /* FIXME */
+@define-color theme_unfocused_bg_color @theme_bg_color;
+@define-color theme_unfocused_selected_bg_color shade(@theme_unfocused_bg_color, 0.75);
+@define-color theme_unfocused_selected_fg_color @theme_fg_color;
 @define-color unfocused_button_background @theme_unfocused_bg_color;
 @define-color unfocused_borders @borders;
 @define-color unfocused_insensitive_borders mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
